Add tileset list endpoints
